# quant-factor-analysis

./: README.md  chatgpt_system.ipynb  claude_system.py  efficient_frontier.ipynb  idea_analysis.ipynb  kimi_system.py  pyproject.toml
