[project]
name = "quant-factor-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "cvxpy>=1.7.3",
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "jupyter-analysis-tools>=1.6.2",
    "matplotlib>=3.10.7",
    "osqp>=1.0.5",
    "pandas>=2.3.3",
    "pandas-datareader>=0.10.0",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
    "yfinance>=0.2.66",
]
